--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
-    "@mui/material": "^6.1.0",
     "aos": "^2.3.4",
+    "chart.js": "^4.4.4",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
