--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.1.0",
     "aos": "^2.3.4",
     "chart.js": "^4.4.4",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
