--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.30",
@@ -26,6 +27,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
