--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
