--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
     "nodemailer": "^6.9.15",
