--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "framer-motion": "^11.3.30",
+    "mongodb": "^6.10.0",
     "next": "14.2.7",
     "nodemailer": "^6.9.15",
     "react": "^18",
