--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "formik": "^2.4.6",
+    "formik-validator-zod": "^2.0.1",
     "framer-motion": "^11.3.30",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.10.0",
     "next": "14.2.7",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-documents": "^1.2.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
@@ -32,7 +36,8 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "postcss": "^8",
